--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                         a portion of your e-commerce spending, opening doors to a brighter financial future.</p>
                     <button class="button-flex">Read Case Study <span
                             class="material-symbols-outlined">arrow_forward</span></button>
-                    <button class="play-audio" id="investmint-audio" aria-label="Play Audio"><img src="/Assets/Images/play.svg"></button>
+                    <button class="play-audio" id="investmint-audio" aria-label="Play Audio"><img
+                            src="/Assets/Images/play.svg"></button>
                 </div>
             </a>
 
@@ -78,7 +79,8 @@
                         new audiences and educating the community about the power of marketing.</p>
                     <button class="button-flex">Read Case Study <span
                             class="material-symbols-outlined">arrow_forward</span></button>
-                    <button class="play-audio left" id="investmint-audio" aria-label="Play Audio"><img src="/Assets/Images/play.svg"></button>
+                    <button class="play-audio left" id="investmint-audio" aria-label="Play Audio"><img
+                            src="/Assets/Images/play.svg"></button>
                 </div>
             </a>
         </section>
@@ -209,6 +211,17 @@
             </div>
         </section>
 
+        <!-- <a class="worst-ux container" href="/Work/worst/ux.html">
+            <div class="bg-overlay"></div>
+            <h2>Worst UX Challenge</h2>
+            <p class="worst-ux-p">
+                Introducing "The Worst UX Challenge" - a hilarious twist on the standard UX case study. In this nightmare project, I took all the standard UX practices and executed them in the worst way imaginable, exaggerating common pitfalls to the extreme. Prepare to laugh and cringe as I showcase the disastrous results in this fun addition to my UX portfolio!</p>
+                <button class="button-flex">Read Case Study <span
+                    class="material-symbols-outlined">arrow_forward</span></button>
+        </a> -->
+
+        <!-- SWICTH OTHER AND ABOUT -->
+        
         <section class="about" id="about">
             <!-- <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay"> -->
             <img src="./Assets/Images/Me/About Image.jpg" alt="Gaurav Shah's Profile Image" class="loading-bg">
@@ -233,7 +246,6 @@
                 </p>
             </div>
         </section>
-
         <!-- Other Work -->
         <section class="other-work container">
             <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay fade">
@@ -274,6 +286,8 @@
                 </a>
             </div>
         </section>
+
+
     </main>
 
     <footer-content></footer-content>
