--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <!-- Optional CSS and JS -->
     <link rel="stylesheet" href="index.css">
     <script src="./index.js" defer></script>
+
+    <!-- OG Tags -->
+    <meta property="og:title" content="Gaurav Shah's Portfolio" />
+    <meta property="og:description"
+        content="Designing delightful UX in fintech. A full-fledged UX designer with a focus on finance, constantly learning and discovering new ways to create amazing user experiences." />
+    <meta property="og:image" content="https://gaurav.studio/Assets/Images/Site.png" />
+    <meta property="og:image:alt" content="Gaurav Shah's Portfolio">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://gaurav.studio/">
+    <meta property="og:locale" content="en_CA">
 </head>
 
 <body>
@@ -221,7 +231,7 @@
         </a> -->
 
         <!-- SWICTH OTHER AND ABOUT -->
-        
+
         <section class="about" id="about">
             <!-- <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay"> -->
             <img src="./Assets/Images/Me/About Image.jpg" alt="Gaurav Shah's Profile Image" class="loading-bg">
