Nav Bar Case Study

--- a/Work/UWMA/UWMA.html
+++ b/Work/UWMA/UWMA.html
@@ -39,9 +39,10 @@
         <p>The UW Marketing Association (UWMA) needed to rebrand after a temporary shutdown due to COVID restrictions, as their old design failed to reflect the club's fun and creative nature.</p>
         <h2>Solution</h2>
         <p>I led a rebranding effort that involved creating a modern letter mark logo, a vibrant color scheme, sleek typography, and various logo variations. The brand book and guidelines provided a cohesive identity and allowed room for creativity.
-            <br><br>
-            <img src="8.png" alt="The new brand book">
-        </p>
+            <br><br></p>
+            <div></div>
+        <div>    <img src="8.png" alt="The new brand book"></div>
+        
         <h2>Impact</h2>
         <p>The rebranding led to a 423% increase in engagement, 316% increase in post interactions, and 700% increase in profile visits. The unique identity helped UWMA stand out and attract more people to their social media and activities.</p>
     </main>
