--- a/index.html
+++ b/index.html
@@ -73,8 +73,27 @@
                             src="/Assets/Images/play.svg"></button>
                 </div>
             </a>
-
-            <a class="work" href="./Work/UWMA/UWMA.html" class="slow-scroll">
+            <a class="work" href="./Work/NavMenu/nav.html" class="slow-scroll">
+                <div id="work2">
+                <img src="./Assets/Images/Work/NavBar.png" alt="Redesigned Navigation Menu Image" id="nav-img"
+                    class="work-image">
+                </div>
+                <div class="work-content" id="work2-content">
+                    <ul class="tags">
+                        <li>UX Research</li>
+                        <li>Frontend Dev</li>
+                        <li>Accessibility</li>
+                    </ul>
+                    <h2>Navigation &shy;Menu</h2>
+                    <p>Let's transfrom the common hamburger menu into an accessible and engaging navigation experience. This research-driven redesign keeps UX principles at the forefront drastically improve usability.  </p>
+                    <button class="button-flex">Read Case Study <span
+                            class="material-symbols-outlined">arrow_forward</span></button>
+                    <button class="play-audio left" id="investmint-audio" aria-label="Play Audio"><img
+                            src="/Assets/Images/play.svg"></button>
+                </div>
+            </a>
+            <!-- UWMA Case Study
+                <a class="work" href="./Work/UWMA/UWMA.html" class="slow-scroll">
                 <img src="./Assets/Images/Work/UWMA.png" alt="UW Marketing Association Branding Image" id="work2"
                     class="work-image">
                 <div class="work-content" id="work2-content">
@@ -92,7 +111,7 @@
                     <button class="play-audio left" id="investmint-audio" aria-label="Play Audio"><img
                             src="/Assets/Images/play.svg"></button>
                 </div>
-            </a>
+            </a> -->
         </section>
 
         <!-- What sets me apart -->
@@ -272,15 +291,15 @@
                         <p>Connecting food with those in need</p>
                     </div>
                 </a>
-                <a class="card work disabled" href="/Work/Oops/oops.html">
-                    <img src="./Assets/Images/Work/Study Bunny.png" alt="Study Bunny">
+                <a class="card work" href="/Work/UWMA/UWMA.html">
+                    <img src="./Assets/Images/Work/UWMA 2.png" alt="Study Bunny">
                     <div class="card-content">
                         <ul class="tags">
-                            <li>UI Design</li>
-                            <li>Figma Basics</li>
+                            <li>Rebranding</li>
+                            <li>Graphic Design</li>
                         </ul>
-                        <h4>Study Bunny</h4>
-                        <p>All-in-one remote learning platform</p>
+                        <h4>UW Marketing</h4>
+                        <p>Reinventing our brand identity</p>
                     </div>
                 </a>
                 <a class="card work disabled" href="/Work/Oops/oops.html">
