--- a/Work/NavMenu/nav.html
+++ b/Work/NavMenu/nav.html
@@ -214,10 +214,8 @@
             <p>To enhance accessibility, I implemented various modifications and adhered to best practices. Take a look
                 at the modified website to see the improvements I made and discover the steps taken to enhance its
                 accessibility.</p>
-            <h3>Modified Website</h3>
-            <p>You can view the navigation menu with a sample portfolio website <a href="/NavBar/index.html">here.</a>
-            </p>
-            <h3>Source Code</h3><br>
+            <button class="read button-flex" onclick="window.open('/NavBar/index.html', '_blank');">View Modified Site <span class="material-symbols-outlined">arrow_forward</span></button>
+            <h3>Source Code Snippet</h3><br>
             <img src="Code.png" alt="Source Code for the Updated Navigation Menu">
             <p>Here's a rundown of the key changes:</p>
             <h3 class="list-h3">Proper Semantic Structure</h3>
