--- a/NavBar/index.html
+++ b/NavBar/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Case Demo - Nav Menu Redesign</title>
+    <link rel="icon" href="favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="./script.js" defer></script>
 </head>
