--- a/Work/InvestMint/InvestMint.html
+++ b/Work/InvestMint/InvestMint.html
@@ -27,8 +27,10 @@
         <div class="detail"><b>Software:</b> Figma & Google forms</div>
     </section>
     <div class="tab">
-        <button class="tablinks active" id="link1" onclick="openTab(1, 2, 'overview', 'case-study')" role="tab" aria-selected="true" aria-controls="tabpanel-id">Overview</button>
-        <button class="tablinks" id="link2" onclick="openTab(2, 1, 'case-study', 'overview')" role="tab" aria-selected="false" aria-controls="tabpanel-id">Case&nbsp;Study</button>
+        <button class="tablinks active" id="link1" onclick="openTab(1, 2, 'overview', 'case-study')" role="tab"
+            aria-selected="true" aria-controls="tabpanel-id">Overview</button>
+        <button class="tablinks" id="link2" onclick="openTab(2, 1, 'case-study', 'overview')" role="tab"
+            aria-selected="false" aria-controls="tabpanel-id">Case&nbsp;Study</button>
         <div class="tablinks empty-tab"></div>
     </div>
     <main id="overview">
@@ -45,12 +47,14 @@
             Our unique value proposition was to help beginners learn and save slowly, ultimately becoming confident
             investors. The browser extension streamlined the process, linking to a website and app for investment
             monitoring and financial education.</p>
+        <div></div>
+        <div><img src="../../Assets/Images/Work/Investmint.gif" alt="Browser Extension Demo"></div>
         <h2>Impact</h2>
         <p>Our project stood out, being selected in the top 4% worldwide. We achieved an impressive 80% user adoption
             rate, generated over 20 promising leads, and identified a total available market of $151M. My key takeaways
             include the significance of process, the nuances of copywriting, and the remarkable benefits of auto-layout
             in Figma.</p>
-            
+
     </main>
     <main id="case-study" class="hide">
         <aside>
@@ -78,7 +82,8 @@
             <p>With rising inflation, saving like we did 30 years ago no longer works. Investing is increasingly
                 becoming a necessity. News reports and mass population studies only confirmed our hypothesis that the
                 lack of investing among the youth was a widespread issue.</p>
-            <p>After conducting a survey among the alumni and current students of our high school, I also found out that
+            <p>After conducting a survey among the alumni and current students of our high school, We also found out
+                that
                 <b>56% (43 respondents)</b> expressed an interest in investing their money but are not yet doing so.
                 This data
                 implies that there is a potential market for investment opportunities among young people, but that they
@@ -88,6 +93,13 @@
             <h2>Identifying Pain Points</h2>
             <p>Our survey and empathy map revealed some key pain points that prevented people from investing. They are
                 listed below in the order of decreasing popularity.</p>
+            <div class="callout heads-up-callout">
+                <div class="callout-emoji">💡</div>
+                <div class="callout-content">
+                    <p class="heads-up">While we all helped draw conclusions, another team member was responsible for
+                        collecting and compiling the data of this survey.</p>
+                </div>
+            </div>
             <img src="2.png" alt="Understanding Pain Points - Survey Response">
             <div class="callout">
                 <div class="callout-emoji">🤔</div>
@@ -129,6 +141,13 @@
                 us to reach a broader audience.</p>
             <img src="3.png" alt="Psychographic and Behavioral Market Segmentation">
             <h3>Perceptual Map</h3>
+            <div class="callout heads-up-callout no-top-margin">
+                <div class="callout-emoji">💡</div>
+                <div class="callout-content">
+                    <p class="heads-up">While I supported the research for this artifact, it was created by another team
+                        member.</p>
+                </div>
+            </div>
             <p>The idea of investing apps in India is relatively new and hence most apps are targeted towards
                 knowledgeable investors. We saw a <b>clear need</b> for more education focused investment services. With
                 the gap in the market clear, we were ready to develop our product further.</p>
@@ -178,12 +197,26 @@
                 information architecture diagram showcases the linked website, which allows users to effortlessly
                 monitor their portfolio, make investments, access concise educational resources, and manage account
                 settings.</p>
+            <div class="callout heads-up-callout">
+                <div class="callout-emoji">💡</div>
+                <div class="callout-content">
+                    <p class="heads-up">This diagram was refined after the competition period.</p>
+                </div>
+            </div>
+
             <img src="6.png" alt="Information Architecture Diagram">
 
+
             <h3>Onboarding Flow</h3>
-            <p>Based on the information architecture, we identified the necessary user information during initial
+            <p>Based on the information architecture, I identified the necessary user information during initial
                 sign-in. Our goal was to uphold our value of simplicity, ensuring an effortless onboarding flow while
                 gathering all essential data from the user.</p>
+            <div class="callout heads-up-callout">
+                <div class="callout-emoji">💡</div>
+                <div class="callout-content">
+                    <p class="heads-up">This diagram was refined after the competition period.</p>
+                </div>
+            </div>
             <img src="7.png" alt="Onboarding Flow">
 
 
@@ -247,7 +280,7 @@
                 business as well. Therefore performing a market analysis at this stage was necessary.</p>
 
             <img src="9.png" alt="TAM-SAM-SOM Analysis in Rupees (₹) - the Indian currency">
-            <p>Our analysis shows that our product could have great potential for revenue and encouraged us to continue
+            <p>My analysis shows that our product could have great potential for revenue and encouraged us to continue
                 building it as previously envisioned.</p>
 
 
@@ -255,24 +288,30 @@
 
             <div class="impact-wrapper">
                 <h2 class="impact-title">Impact</h2>
-                <div class="impact-container">
+                <div class="impact-container vertical">
                     <div class="impact">
-                        <h3 class="big-number">4%</h3>
-                        <p>Selected among the top 4% of teams worldwide</p>
+                        <h3 class="big-number">Top 4%</h3>
+                        <p>We advanced to the quarter-finals, ranking among the top 4% globally in the competition's multiple rounds.</p>
                     </div>
-
-
-                    <div class="impact">
-                        <h3 class="big-number">80%</h3>
-                        <p>80% user adoption rate</p>
+                    <div class="callout heads-up-callout">
+                        <div class="callout-emoji">🧐</div>
+                        <div class="callout-content">
+                            <p class="heads-up">The following is based on surveys done during the competition.</p>
+                        </div>
                     </div>
-                    <div class="impact">
-                        <h3 class="big-number">20</h3>
-                        <p>Generated over 20 promising leads </p>
-                    </div>
-                    <div class="impact">
-                        <h3 class="big-number">$151M</h3>
-                        <p>A total availible market of 151M USD</p>
+                    <div class="impact-container impact-container-grid">
+                        <div class="impact">
+                            <h3 class="big-number">80%</h3>
+                            <p>80% user adoption rate</p>
+                        </div>
+                        <div class="impact">
+                            <h3 class="big-number">20</h3>
+                            <p>Generated over 20 promising leads </p>
+                        </div>
+                        <div class="impact">
+                            <h3 class="big-number">$151M</h3>
+                            <p>A total availible market of 151M USD</p>
+                        </div>
                     </div>
                 </div>
             </div>
