--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
     <!-- End Google Tag Manager (noscript) -->
 
     <nav-bar></nav-bar>
+
+
     <main>
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-content">
                 <h1>Gaurav Shah</h1>
-                <h5>Designing delightful UX in fintech</h5>
+                <h5>Combining UX, business and tech to drive business growth</h5>
                 <div class="button-group">
                     <button class="primary button-flex" onclick="window.scrollBy(0, window.innerHeight * 0.7);">See my
                         work
                         <span class="material-symbols-outlined">arrow_downward</span></button>
-                    <button class="secondary button-flex"
-                        onclick="window.location.href='mailto:gshah@uwaterloo.ca'">Let's
+                    <button class="secondary button-flex lets-talk">Let's
                         Talk <span class="material-symbols-outlined">arrow_forward</span></button>
                 </div>
             </div>
@@ -75,17 +76,19 @@
             </a>
             <a class="work" href="./Work/NavMenu/nav.html" class="slow-scroll">
                 <div id="work2">
-                <img src="./Assets/Images/Work/NavBar.png" alt="Redesigned Navigation Menu Image" id="nav-img"
-                    class="work-image">
+                    <img src="./Assets/Images/Work/NavBar.png" alt="Redesigned Navigation Menu Image" id="nav-img"
+                        class="work-image">
                 </div>
                 <div class="work-content" id="work2-content">
                     <ul class="tags">
-                        <li>UX Research</li>
+                        <li>Visual Design</li>
                         <li>Frontend Dev</li>
                         <li>Accessibility</li>
                     </ul>
                     <h2>Navigation &shy;Menu</h2>
-                    <p>Let's transfrom the common hamburger menu into an accessible and engaging navigation experience. This research-driven redesign keeps UX principles at the forefront drastically improve usability.  </p>
+                    <p>Let's transfrom the common hamburger menu into an accessible and engaging navigation experience.
+                        This research-driven redesign keeps UX principles at the forefront drastically improve
+                        usability. </p>
                     <button class="button-flex">Read Case Study <span
                             class="material-symbols-outlined">arrow_forward</span></button>
                     <button class="play-audio left" id="investmint-audio" aria-label="Play Audio"><img
@@ -251,7 +254,7 @@
 
         <!-- SWICTH OTHER AND ABOUT -->
 
-        <section class="about" id="about">
+        <section class="about" id="about-me">
             <!-- <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay"> -->
             <img src="./Assets/Images/Me/About Image.jpg" alt="Gaurav Shah's Profile Image" class="loading-bg">
             <div class="about-content">
