--- a/Work/Oops/oops.html
+++ b/Work/Oops/oops.html
@@ -53,7 +53,7 @@
         <p>Oops! It seems you've stumbled upon a case study that is still brewing in my design lab. Make sure to check
             back soon for the full experience. In the meantime, feel free to explore my other projects on the <a
                 href="/"> home page.</a></p>
-        <button><span class="material-symbols-outlined">
+        <button onclick="window.location.href='/'"><span class="material-symbols-outlined">
             arrow_back
             </span>Home Page</button>
     </main>
