--- a/index.html
+++ b/index.html
@@ -305,15 +305,15 @@
                         <p>Reinventing our brand identity</p>
                     </div>
                 </a>
-                <a class="card work disabled" href="/Work/Oops/oops.html">
-                    <img src="./Assets/Images/Work/TTP.png" alt="The Teen Pop">
+                <a class="card work" href="./Work/GBDA-Magazine/gbda-magazine.html">
+                    <img src="./Assets/Images/Work/Designed-Worlds.svg" alt="Designed Worlds Magazine">
                     <div class="card-content">
                         <ul class="tags">
                             <li>Editorial Design</li>
                             <li>Layout & Composition</li>
                         </ul>
-                        <h4>The Teen Pop</h4>
-                        <p>India's first online teen magazine</p>
+                        <h4>Designed Worlds</h4>
+                        <p>My key takeaways from GBDA 101</p>
                     </div>
                 </a>
             </div>
