--- a/index.html
+++ b/index.html
@@ -37,21 +37,23 @@
         <!-- Hero Section -->
         <section class="hero">
             <div class="hero-content">
+                <!-- <img src="./Assets/Images/Textless logo.svg" alt="Gaurav Shah Logo" class="hero-logo"> -->
                 <h1>Gaurav Shah</h1>
                 <h5>Combining UX, business and tech to drive business growth</h5>
                 <div class="button-group">
-                    <button class="primary button-flex" onclick="window.scrollBy(0, window.innerHeight * 0.7);">See my
+                    <button class="primary button-flex" onclick="window.location.href='#works';">See my
                         work
                         <span class="material-symbols-outlined">arrow_downward</span></button>
                     <button class="secondary button-flex lets-talk">Let's
                         Talk <span class="material-symbols-outlined">arrow_forward</span></button>
                 </div>
             </div>
-            <img src="./Assets/Images/Me/Hero Image.svg" alt="Gaurav Shah's Profile Image">
+            <!-- <img src="./Assets/Images/Me/Hero Image.svg" alt="Gaurav Shah's Profile Image"> -->
         </section>
 
         <!-- Featured Work Section -->
         <section class="works" id="works">
+            
             <a class="work" href="./Work/InvestMint/InvestMint.html" class="slow-scroll">
                 <div id="work1">
                     <img src="./Assets/Images/Work/Investmint.gif" alt="Investmint Mockup Gif" id="investmint-gif"
@@ -70,10 +72,11 @@
                         a portion of your e-commerce spending, opening doors to a brighter financial future.</p>
                     <button class="button-flex">Read Case Study <span
                             class="material-symbols-outlined">arrow_forward</span></button>
-                    <button class="play-audio" id="investmint-audio" aria-label="Play Audio"><img
-                            src="/Assets/Images/play.svg"></button>
+                    <!-- <button class="play-audio" id="investmint-audio" aria-label="Play Audio"><img
+                            src="/Assets/Images/play.svg"></button> -->
                 </div>
             </a>
+            
             <a class="work" href="./Work/NavMenu/nav.html" class="slow-scroll">
                 <div id="work2">
                     <img src="./Assets/Images/Work/NavBar.png" alt="Redesigned Navigation Menu Image" id="nav-img"
@@ -91,8 +94,8 @@
                         usability. </p>
                     <button class="button-flex">Read Case Study <span
                             class="material-symbols-outlined">arrow_forward</span></button>
-                    <button class="play-audio left" id="investmint-audio" aria-label="Play Audio"><img
-                            src="/Assets/Images/play.svg"></button>
+                    <!-- <button class="play-audio left" id="investmint-audio" aria-label="Play Audio"><img
+                            src="/Assets/Images/play.svg"></button> -->
                 </div>
             </a>
             <!-- UWMA Case Study
