--- a/Work/GBDA-Magazine/gbda-magazine.html
+++ b/Work/GBDA-Magazine/gbda-magazine.html
@@ -20,6 +20,11 @@
     <header>
         <img src="header.png" alt="GBDA Magazine">
     </header>
+    <section class="details">
+        <div class="detail"><b>Role:</b> Solo Designer</div>
+        <div class="detail"><b>Timeline:</b> Winter 2023, 2 weeks</div>
+        <div class="detail"><b>Software:</b> Indesign</div>
+    </section>
     <main>
         <h2>Introduction</h2>
         <p>Introducing "Designed Worlds," my very own magazine born out of my Intro to Design course (GBDA 101). Before this class, I thought design was all about pretty visuals and vague messages. But this course transformed my perspective. In this magazine, I share my top five takeaways, revealing that design goes beyond logos and posters. Everything around us has purposeful design, shaped by cultural contexts and individual experiences. I also explore the power of feedback, the importance of user experience, and the liberating art of breaking design rules. I hope you enjoy reading it just as much as I did creating it.</p>
