--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
+            <div class="hero-bg"></div>
+
             <div class="hero-content">
                 <!-- <img src="./Assets/Images/Textless logo.svg" alt="Gaurav Shah Logo" class="hero-logo"> -->
                 <h1>Gaurav Shah</h1>
@@ -198,7 +200,7 @@
         </section>
 
         <section class="testimonials container no-padding-top">
-            <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay fade">
+            <div class="overlay fade noise-image"></div>
             <!-- <h1 class="watermark">Testimonials</h1> -->
             <h2>Testimon&shy;ials</h2>
             <div class="cards">
@@ -283,7 +285,7 @@
         </section>
         <!-- Other Work -->
         <section class="other-work container">
-            <img src="http://assets.iceable.com/img/noise-transparent.png" class="overlay fade">
+            <div class="overlay fade noise-image"></div>
             <h2>Other Work</h2>
             <div class="cards">
                 <a class="card work" href="/Work/MunchMap/munchmap.html">
