--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
     <main>
         <!-- Hero Section -->
         <section class="hero">
-            <div class="hero-bg"></div>
+            <div class="hero-bg">
+                <svg class="hero-bg-blob light" xmlns="http://www.w3.org/2000/svg" width="922" height="625" viewBox="0 0 922 625" fill="none">
+                    <path d="M749.575 84.2685C808.102 135.134 845.284 192.633 878.335 255.662C911.385 318.137 939.616 386.694 908.631 432.03C877.646 477.92 786.757 500.588 714.459 507.775C641.472 514.963 587.077 506.669 507.204 534.313C427.332 561.957 321.984 626.092 224.209 624.986C125.746 624.433 34.8571 559.746 8.69204 481.237C-18.1615 402.175 19.7089 309.844 87.8756 251.791C156.731 193.739 255.883 169.412 334.378 124.076C413.561 79.2926 472.777 12.9469 542.321 1.88928C611.865 -9.72121 691.048 33.9564 749.575 84.2685Z" fill="var(--light)"/>
+                  </svg>
+
+                <svg class="hero-bg-blob primary" xmlns="http://www.w3.org/2000/svg" width="1590" height="1043" viewBox="0 0 1590 1043" fill="none">
+                    <path d="M993.32 158.839C1065.04 206.269 1091.01 298.1 1225.8 414.15C1360.58 531.21 1604.19 670.47 1589.35 753.219C1574.51 834.959 1301.23 859.178 1108.32 914.681C915.415 969.174 802.886 1053.94 701.486 1041.83C600.087 1028.71 509.816 918.717 373.792 849.087C239.005 779.457 58.4638 749.183 12.7103 674.507C-33.0432 599.831 55.9907 479.744 101.744 343.511C148.734 207.278 152.444 54.8987 242.714 13.5242C334.222 -28.8594 512.289 38.7525 659.443 74.0722C806.596 109.392 922.834 111.41 993.32 158.839Z" fill="var(--primary)"/>
+                  </svg>
+                <div class="noise-image fade-reverse"></div>
+            </div>
 
             <div class="hero-content">
                 <!-- <img src="./Assets/Images/Textless logo.svg" alt="Gaurav Shah Logo" class="hero-logo"> -->
@@ -55,7 +64,7 @@
 
         <!-- Featured Work Section -->
         <section class="works" id="works">
-            
+
             <a class="work" href="./Work/InvestMint/InvestMint.html" class="slow-scroll">
                 <div id="work1">
                     <img src="./Assets/Images/Work/Investmint.gif" alt="Investmint Mockup Gif" id="investmint-gif"
@@ -78,7 +87,7 @@
                             src="/Assets/Images/play.svg"></button> -->
                 </div>
             </a>
-            
+
             <a class="work" href="./Work/NavMenu/nav.html" class="slow-scroll">
                 <div id="work2">
                     <img src="./Assets/Images/Work/NavBar.png" alt="Redesigned Navigation Menu Image" id="nav-img"
