--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
         </section>
 
-        <section class="marquee">
+        <!-- <section class="marquee">
             <div class="marquee__content">
                 <ul class="list-inline">
                     <li>Minimalistic</li>
@@ -206,9 +206,9 @@
                     <li>Adaptive</li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
-        <section class="testimonials container no-padding-top">
+        <section class="testimonials container">
             <div class="overlay fade noise-image"></div>
             <!-- <h1 class="watermark">Testimonials</h1> -->
             <h2>Testimon&shy;ials</h2>
